...
<!--Alyssa Gomez n01042777 Section B-->
<resources>
    <!--App Name-->
    <string name="app_name">Aphrodite</string>

    <!--Bottom Navigation-->
    <string name="nav_title_home">Home</string>
    <string name="nav_title_layouts">Layouts</string>
    <string name="nav_title_settings">Settings</string>
    <string name="nav_title_voice">Voice/LED</string>

    <!--Back Button Alert Dialog (Main Activity)-->
    <string name="MA_AlertDialogExitApp_title">Exit App</string>
    <string name="MA_AlertDialogExitApp_msg">Are you sure you want to exit?</string>
    <string name="MA_AlertDialogExitApp_yes">Yes, exit app</string>
    <string name="MA_AlertDialogExitApp_no">No, stay in app</string>
...
    <string name="VC_placeholder_vcName_txt">Voice Command Name</string>
    <string name="VC_placeholder_vcDesc_txt">Voice Command Description</string>

    <string name="CL_LayoutName_Text">Layout Name</string>
    <string name="CL_CreateLayout_Text">Toggle Modules and Choose Locations</string>
    <!--MODULES NAMES START-->
    <string name="CL_Feature_Text_Time">Time</string>
    <string name="CL_Feature_Text_Date">Date</string>
    <string name="CL_Feature_Text_Calendar">Calendar</string>
    <string name="CL_Feature_Text_Weather">Weather</string>
    <string name="CL_Feature_Text_RoomT_H">Room_Temp_Hum</string>
    <string name="CL_Feature_Text_Stocks">Stocks</string>
    <string name="CL_Feature_Text_SocialMedNot">Notifications</string>
    <!--MODULES NAMES END-->
    <string name="CL_SaveButton_Text">Save</string>
    <string name="Login_userCreated_txt">User created</string>
    <string name="AFR_TextView_title">Review</string>
    <string name="AFR_Button_submit">Submit</string>

    <!--MODULE LOCATIONS-->
    <string-array name="Layout_Values">
...

    <string name="AFR_TextView_text">Give us a review! Let us know how we did and how we can improve Aphrodite.</string>
    <string name="H_TextView_text">What will be your layout today?</string>


    <string name="field_cannot_be_empty_txt">Field cannot be empty</string>
    <string name="FSU_register_txt">Register</string>

    <!--  Fragment Sign in and Fragment Sign Up  -->
    <string name="FSU_name_hint">Name</string>
    <string name="FSU_email_hint">Email</string>
    <string name="FSU_pass_hint">Password</string>
    <string name="FSI_login_txt">Login</string>
    <string name="FSU_already_registered_txt">Already Registered?</string>
    <string name="FSU_gotologin_txt">Go To Login</string>
    <string name="FSU_userExistsError">User already created</string>
    <string name="FSU_emptyFieldsError">Fields cannot be empty</string>
    <string name="FSU_confirmPass_hint">Confirm Password</string>
    <string name="FSU_matchPasswordsError">Passwords do not match</string>
    <string name="FSI_fieldEmptyError">Please fill both fields</string>
    <string name="HF_add_layout_fab">Add Layout</string>
    <string name="FL_clicktoedit_txt">Tap on a Layout to edit</string>
    <string name="HF_updateCurrentLayoutError">Layout couldn\'t be set</string>

    <!-- Master Module Names (English Only) (start) -->
    <string name="MASTER_Mod0" translatable="false">Time</string>
    <string name="MASTER_Mod1" translatable="false">Date</string>
...
