...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.create_layout.CreateLayoutFragment">

        <Spinner
            android:id="@+id/CLP_spinner_time"
            android:layout_width="@dimen/CLP_spinner_width"
            android:layout_height="@dimen/CLP_height"
            android:layout_marginTop="@dimen/CLP_margin_top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.238"
            app:layout_constraintStart_toEndOf="@+id/CLP_Feature_Time"
            app:layout_constraintTop_toBottomOf="@+id/CLP_LayoutName_User_Input_PT"
            app:layout_constraintVertical_bias="0.0" />

        <Spinner
            android:id="@+id/CLP_spinner_date"
            android:layout_width="@dimen/CLP_spinner_width"
            android:layout_height="@dimen/CLP_height"
            android:layout_marginTop="@dimen/CLP_margin_top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.238"
            app:layout_constraintStart_toEndOf="@+id/CLP_Feature_Date"
            app:layout_constraintTop_toBottomOf="@+id/CLP_spinner_time"
            app:layout_constraintVertical_bias="0.0" />

        <Spinner
            android:id="@+id/CLP_spinner_calendar"
            android:layout_width="@dimen/CLP_spinner_width"
            android:layout_height="@dimen/CLP_height"
            android:layout_marginTop="@dimen/CLP_margin_top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.238"
            app:layout_constraintStart_toEndOf="@+id/CLP_Feature_Calendar"
            app:layout_constraintTop_toBottomOf="@+id/CLP_spinner_date"
            app:layout_constraintVertical_bias="0.0" />

        <Spinner
            android:id="@+id/CLP_spinner_weather"
            android:layout_width="@dimen/CLP_spinner_width"
            android:layout_height="@dimen/CLP_height"
            android:layout_marginTop="@dimen/CLP_margin_top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.238"
            app:layout_constraintStart_toEndOf="@+id/CLP_Feature_Weather"
            app:layout_constraintTop_toBottomOf="@+id/CLP_spinner_calendar"
            app:layout_constraintVertical_bias="0.0" />

        <Spinner
            android:id="@+id/CLP_spinner_temp_hum"
            android:layout_width="@dimen/CLP_spinner_width"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CLP_Feature_Stocks"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/CLP_SaveButton"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
...
