...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lighter_oak"
        tools:context=".ui.login.SignUpFragment">

        <Button
            android:id="@+id/FSU_signup"
            style="@style/RegisterPageItems"
            android:layout_width="220dp"
            android:layout_height="80dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/oak"
            android:text="@string/FSU_register_txt"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FSU_confrimPassEditTXT" />

        <EditText
            android:id="@+id/FSU_nameEditTXT"
            style="@style/RegisterPageItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:autofillHints="name"
            android:ems="10"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FSU_logo" />

        <EditText
            android:id="@+id/FSU_emailEditTXT"
            style="@style/RegisterPageItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:autofillHints="emailAddress"
            android:ems="10"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FSU_nameEditTXT" />
        
        <EditText
            android:id="@+id/FSU_passEditTXT"
            style="@style/RegisterPageItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/FSU_pass_hint"
...
